Feat/user router (#15)
* feat: added user router and its deps

* feat: added dtos.
