# server/dtos/error_dto.go
@@ -1,0 +1,6 @@
+package dtos
+
+type ErrorDTO struct {
+	Code	int    `json:"code" example:"400"`
+	Message string `json:"message" example:"Bad Request"`
+}
